feat: RSS-PZ-02 Implement comprehensive validation for first name and surname input fields

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,10 +3,11 @@
 @import './fonts.scss';
 @import './mixins.scss';
 @import './variables.scss';
+@import './components/fontello.scss';
 
 @import './pages/login/login.scss';
 @import './pages/login/login-inputs.scss';
-@import './pages/login/login-button.scss';
+@import './pages/login/form-errors.scss';
 
 @import './components/background-image.scss';
 @import './components/button.scss';
