--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -1,8 +1,10 @@
 .button {
   min-width: 110px;
   padding: 0.8rem 2rem;
-  border: none;
+  border: 2px solid $color-white;
   border-radius: $border-radius;
+  font-size: 1em;
+  transition: $transition;
 
   &:enabled {
     background-color: $color-active;
@@ -14,5 +16,22 @@
     background-color: $color-disabled;
     color: $color-darkgray;
     cursor: default;
+  }
+
+  @media screen and (hover: hover) {
+    &:enabled:hover {
+      background-color: $color-valid;
+    }
+
+    &:active {
+      transform: scale(0.95);
+      background-color: $color-valid;
+    }
+  }
+
+  @media (hover: none) {
+    &:active {
+      background-color: $color-valid;
+    }
   }
 }
