--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -11,3 +11,24 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'fontello';
+  src: url('src/assets/fonts/fontello.eot?16094576');
+  src:
+    url('src/assets/fonts/fontello.eot?16094576#iefix')
+      format('embedded-opentype'),
+    url('src/assets/fonts/fontello.woff2?16094576') format('woff2'),
+    url('src/assets/fonts/fontello.woff?16094576') format('woff'),
+    url('src/assets/fonts/fontello.ttf?16094576') format('truetype'),
+    url('src/assets/fonts/fontello.svg?16094576#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('src/assets/fonts/fontello.svg?16094576#fontello') format('svg');
+  }
+}
