--- a/src/styles/pages/login/login-inputs.scss
+++ b/src/styles/pages/login/login-inputs.scss
@@ -1,10 +1,17 @@
-.login-form__input-field {
+.form__input-field {
+  min-width: 16em;
+  height: 3em;
   font-size: 1em;
-  padding: 0.8rem;
+  padding: 0 0.5rem;
   border: 2px solid;
   border-radius: $border-radius;
   color: $color-darkgray;
   transition: $transition;
+
+  &.error-background {
+    background-color: $color-invalid-opacity;
+    transition: $transition;
+  }
 
   &::placeholder {
     font-size: 1em;
@@ -19,12 +26,14 @@
     outline: 0;
   }
 
-  &:hover {
+  &:active,
+  &:focus {
     border-color: $color-hover;
   }
 
-  &:active,
-  &:focus {
-    border-color: $color-active;
+  @media screen and (hover: hover) {
+    &:hover {
+      border-color: $color-hover;
+    }
   }
 }
