--- a/src/styles/pages/login/login.scss
+++ b/src/styles/pages/login/login.scss
@@ -1,11 +1,11 @@
 .login-page-wrapper {
-  background-image: url('steve-johnson.webp');
+  background-image: url('src/assets/images/steve-johnson.webp');
 }
 
-.login-form {
+.form {
   @include flex(center, center);
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.5rem;
   padding: 3rem 2rem;
   background: $color-white;
   border-radius: 10px;
