--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,7 +6,10 @@ $color-disabled: #ecebeb;
 $color-enabled: #fbecd5;
 $color-hover: #fdb669;
 $color-active: #f4860d;
-$color-invalid: #f34079;
+$color-invalid: #bf0301;
+$color-valid: #009485;
+
+$color-invalid-opacity: rgba(191, 3, 1, 0.06);
 
 $border-radius: 6px;
 
