--- a/src/styles/pages/login/login-inputs.scss
+++ b/src/styles/pages/login/login-inputs.scss
@@ -9,7 +9,7 @@
   transition: $transition;
 
   &.error-background {
-    background-color: $color-invalid-opacity;
+    background-color: $color-invalid-bg;
     transition: $transition;
   }
 
