--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,14 +2,12 @@ $color-white: #ffffff;
 $color-darkgray: #5c5d60;
 $color-lightgray: #b3b5bc;
 
-$color-disabled: #ecebeb;
-$color-enabled: #fbecd5;
-$color-hover: #fdb669;
-$color-active: #f4860d;
-$color-invalid: #bf0301;
-$color-valid: #009485;
-
-$color-invalid-opacity: rgba(191, 3, 1, 0.06);
+$color-disabled: #e7e8e6;
+$color-enabled: #c3c5c2;
+$color-hover: #999f93;
+$color-active: #4d5c3e;
+$color-invalid: #897268;
+$color-invalid-bg: rgba(191, 3, 1, 0.06);
 
 $border-radius: 6px;
 
