--- a/src/styles/pages/login/form-errors.scss
+++ b/src/styles/pages/login/form-errors.scss
@@ -12,3 +12,12 @@
   margin-block-end: 0.2em;
   color: $color-invalid;
 }
+
+.icon-cancel:before {
+  content: '\e802';
+  color: $color-invalid;
+  opacity: 0.8;
+  margin-right: 0.2em;
+  width: 1em;
+  line-height: 1em;
+}
