--- a/src/styles/pages/login/login.scss
+++ b/src/styles/pages/login/login.scss
@@ -1,12 +1,9 @@
-.login-page-wrapper {
-  background-image: url('src/assets/images/steve-johnson.webp');
-}
-
 .form {
   @include flex(center, center);
   flex-direction: column;
   gap: 0.5rem;
-  padding: 3rem 2rem;
-  background: $color-white;
+  padding: 4rem 3rem 3rem;
+  background: rgba(255, 255, 255, 0.6);
   border-radius: 10px;
+  animation: bounceInTop 2s ease 0s 1 normal forwards;
 }
