--- a/src/styles/components/page-wrapper.scss
+++ b/src/styles/components/page-wrapper.scss
@@ -1,17 +1,11 @@
 .page-wrapper {
-  width: 100vw;
-  height: 100dvh;
+  max-width: 1920px;
+  height: 100%;
   padding: 1em;
-  display: flex;
+  margin: 0 auto;
   @include backgroundImage('src/assets/images/bg-image.webp');
 
-  &#login-wrapper {
-    justify-content: center;
-    align-items: center;
-  }
-
-  &#start-wrapper {
-    justify-content: center;
-    align-items: flex-start;
+  &#login {
+    @include flex(center, center);
   }
 }
