--- a/src/styles/pages/start/logout-button.scss
+++ b/src/styles/pages/start/logout-button.scss
@@ -1,20 +1,23 @@
 .start__logout-button {
-  padding: 1em;
+  max-width: 4.5em;
+  max-height: 4.5em;
+  padding: 0.7em 1em;
   z-index: 1;
   transition: $transition;
   animation: ScaleUpCenter 2s ease 0s 1 normal forwards;
-  background-color: transparent;
-  border: none;
-  color: $color-white;
+  background: transparent;
+  border: 2px solid $color-active;
+  border-radius: 100%;
+  color: $color-active;
 
   &:active {
-    scale: 1.2;
+    scale: 0.8;
   }
 
   @media screen and (hover: hover) {
     &:hover {
-      color: $color-active;
-      border-color: $color-active;
+      background: $color-active;
+      color: $color-white;
     }
   }
 }
