--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $color-hover: #999f93;
 $color-active: #4d5c3e;
 $color-invalid: #897268;
 $color-invalid-bg: rgba(191, 3, 1, 0.06);
+$color-white-bg: rgba(255, 255, 255, 0.6);
 
 $border-radius: 6px;
 
