--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,18 @@
 @font-face {
+  font-family: 'Hello Dina Script';
+  src: url('src/assets/fonts/HelloDinaScript.eot');
+  src:
+    url('src/assets/fonts/HelloDinaScript.eot?#iefix')
+      format('embedded-opentype'),
+    url('src/assets/fonts/HelloDinaScript.woff2') format('woff2'),
+    url('src/assets/fonts/HelloDinaScript.woff') format('woff'),
+    url('src/assets/fonts/HelloDinaScript.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Open Sans';
   src: url('src/assets/fonts/OpenSans-Regular.eot');
   src:
