fix: RSS-PZ-05 Move application name to header and update scss styles

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,4 +1,11 @@
 .header {
-  @include flex(flex-end, center);
+  @include flex(space-between, center);
   margin-bottom: 4em;
+}
+
+.header__title {
+  color: $color-active;
+  font-weight: bold;
+  font-size: 2em;
+  text-transform: uppercase;
 }
