--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,13 +8,18 @@
 @import './animations/scaleUpCenter.scss';
 @import './animations/attention.scss';
 
+html,
+body {
+  width: 100%;
+  height: 100dvh;
+  margin: 0;
+  padding: 0;
+}
+
 html {
   font-family: 'Open Sans';
   font-weight: normal;
   font-style: normal;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
 
   @media screen and (max-width: 768px) {
     font-size: 12px;
@@ -26,7 +31,7 @@ html {
 }
 
 body {
-  height: 100%;
+  @include backgroundImage('src/assets/images/bg-image.webp');
 }
 
 @import './components/page-wrapper.scss';
