--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -1,5 +1,4 @@
 .button {
-  border: 2px solid $color-white;
   border-radius: $border-radius;
   transition: $transition;
 
@@ -9,5 +8,30 @@
 
   &:disabled {
     cursor: default;
+  }
+}
+
+.button[type='submit'] {
+  border: 2px solid $color-white;
+}
+
+.button[type='button'] {
+  padding: 0.5em;
+  font-size: 2em;
+  line-height: 0.8;
+  animation: ScaleUpCenter 2s ease 0s 1 normal forwards;
+  background: transparent;
+  border: 2px solid $color-active;
+  color: $color-active;
+
+  &:active {
+    scale: 0.8;
+  }
+
+  @media screen and (hover: hover) {
+    &:hover {
+      background: $color-active;
+      color: $color-white;
+    }
   }
 }
