--- a/src/styles/pages/login/form-button.scss
+++ b/src/styles/pages/login/form-button.scss
@@ -1,7 +1,7 @@
 .form__button {
   min-width: 110px;
-  padding: 0.8rem 2rem;
-  font-size: 1em;
+  padding: 12.8px 32px;
+  font-size: 16px;
 
   &:enabled {
     background-color: $color-active;
