--- a/src/styles/pages/login/login-inputs.scss
+++ b/src/styles/pages/login/login-inputs.scss
@@ -1,8 +1,8 @@
 .form__input-field {
-  min-width: 16em;
-  height: 3em;
-  font-size: 1em;
-  padding: 0 0.5rem;
+  width: 256px;
+  height: 48px;
+  font-size: 16px;
+  padding: 0 8px;
   border: 2px solid;
   border-radius: $border-radius;
   color: $color-darkgray;
