--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,8 +25,16 @@ html {
     font-size: 12px;
   }
 
-  @media screen and (max-width: 375px) {
+  @media screen and (max-width: 680px) {
     font-size: 10px;
+  }
+
+  @media screen and (max-width: 375px) {
+    font-size: 8px;
+  }
+
+  @media screen and (max-width: 320px) {
+    font-size: 6px;
   }
 }
 
@@ -35,6 +43,7 @@ body {
 }
 
 @import './components/page-wrapper.scss';
+@import './components/main.scss';
 @import './components/header.scss';
 @import './components/button.scss';
 
@@ -46,3 +55,6 @@ body {
 @import './pages/start/start-page.scss';
 @import './pages/start/logout-button.scss';
 @import './pages/start/start-greeting.scss';
+
+@import './pages/main/containers.scss';
+@import './pages/main/word.scss';
